@@ -13,7 +13,7 @@ converting file formats or first downloading the data.</p>
 
 To use the commands, add those directories to
 your <tt>matlabpath</tt>. If you choose to install in a different
-location you'll still need to make sure the destination dirctories are
+location you'll still need to make sure the destination directories are
 on Matlab's path.</p>
 
 <p>See the ReadMe file and online help for usage information.</p>
